# sql-chatbot

./: .gitignore  README.md  pyproject.toml
src/: __init__.py
src/business_copilot/: __init__.py
src/business_copilot/biz_analytics/: db_tools.py  main.py  memory.py  pgres_utils.py  prompts.py  schemas.py  utils.py
src/business_copilot/notebooks/: 1_scoping.ipynb  2_postgres_test.ipynb  Untitled.ipynb
