[project]
name = "business-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.74",
    "langchain-openai>=0.3.29",
    "langgraph>=0.6.4",
    "langgraph-cli>=0.3.6",
    "mcp>=1.12.4",
    "mypy>=1.17.1",
    "pandas>=2.3.1",
    "psycopg2-binary>=2.9.10",
]

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"
